# dao-mail

./: Cargo.toml  README.md  prompt.md
contracts/email-dao/: Cargo.toml
contracts/starter-kit/: Cargo.toml
contracts/starter-kit/src/: contract.rs  dkim.rs  error.rs  helpers.rs  integration.rs  lib.rs  msg.rs  state.rs
contracts/starter-kit/src/authenticator/: composite.rs  error.rs
contracts/starter-kit/src/authenticator/handler/: authenticate.rs  confirm_execution.rs  mod.rs  on_authenticator_added.rs  on_authenticator_removed.rs  track.rs
contracts/starter-kit/src/counter/: error.rs  mod.rs  params.rs
contracts/starter-kit/src/cw3/: cw3_execute.rs  mod.rs
contracts/starter-kit/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/starter-kit/src/replies/: instantiate_reply.rs  mod.rs  reply.rs
contracts/starter-kit/src/test_helper/: authenticator_setup.rs  constants.rs  mod.rs
contracts/starter-kit/tests/: count.rs  test-dkim.rs  test-dkim2.rs
inmail-treasury/: Cargo.toml  justfile
inmail-treasury/contracts/dkim-multisig-account/src/: integration.rs  msg.rs
inmail-treasury/contracts/dkim-multisig-account/src/authenticator/: error.rs
inmail-treasury/contracts/dkim-multisig-account/src/authenticator/handler/: confirm_execution.rs  mod.rs  on_authenticator_added.rs
inmail-treasury/contracts/dkim-multisig-account/src/handlers/: execute.rs
inmail-treasury/contracts/email-dao/src/: contract.rs  interface.rs  msg.rs
inmail-treasury/contracts/email-dao/tests/: count.rs
inmail-treasury/contracts/starter-kit/: Cargo.toml
inmail-treasury/contracts/starter-kit/src/: error.rs  integration.rs  interface.rs  state.rs
inmail-treasury/contracts/starter-kit/src/authenticator/handler/: on_authenticator_removed.rs
inmail-treasury/contracts/starter-kit/src/counter/: error.rs  params.rs
inmail-treasury/contracts/starter-kit/src/handlers/: instantiate.rs
inmail-treasury/contracts/starter-kit/src/replies/: mod.rs
inmail-treasury/contracts/starter-kit/src/test_helper/: authenticator_setup.rs
inmail-treasury/contracts/warden-poller/: Cargo.toml  NOTICE  README.md  start_mainnet_state.sh
inmail-treasury/contracts/warden-poller/src/: contract.rs  helpers.rs  interface.rs  msg.rs  state.rs
inmail-treasury/contracts/warden-poller/tests/: count.rs
oauth/: .gitignore  gmailChecker.js  index.js
src/: lib.rs
