[package]
edition = "2021"
name = "dkim-auth"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deploy"
#path = "bin/deploy.rs"
required-features = ["deploy"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
deploy = ["cw-orch/daemon", "dotenv", "env_logger"]


[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = { version = "1.5.5", features = ["stargate", "cosmwasm_1_1"] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.2"
itertools = "0.12.1"
cw-authenticator = "1.0.0"
osmosis-std = "0.25.0"
# osmosis-std = { path = "../../../osmosis-rust/packages/osmosis-std" }
rstest = "0.18.2"
schemars = "0.8.12"
serde = "1.0.180"
thiserror = { version = "1.0.23" }
time = { version = "0.3.31", features = ["macros"] }
cw-ownable = "0.5.1"
cw3 = "1.1.2"
cw3-fixed-multisig = {  version = "1.1.2", features = ["library"] }
cw4 = "1.1.2"
cw-utils= "1.0.3"

#ring = { version = "0.17.0", default-features = false }
ring = { version = "0.17.0", features = ["wasm32_unknown_unknown_js"] }
base64 = "0.22.1"
pem = "1.0.2" # for parsing PEM-formatted public keys
rsa = "0.8.0"
sha2 = "0.10.6"
mail-parser = "0.9.4"

# Testing / deployment
cw-orch = { version = "0.26.0" }
env_logger = { version = "0.11.5", optional = true }
dotenv = { version = "0.15.0", optional = true }

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dev-dependencies]
mock-cosmwasm-contract = "0.1.2"
osmosis-test-tube = "25.0.0"
# osmosis-test-tube = { path = "../../../test-tube/packages/osmosis-test-tube" }
rstest = "0.18.2"

cw-multi-test = "2.0.0"
dkim = "0.1.1"